[package]
name = "feature-flagged"
version = "0.1.0"
authors = ["Thomas Eizinger <thomas@eizinger.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = { git = "https://github.com/thomaseizinger/rust-libp2p", branch = "feature-flags", features = ["tcp", "mdns", "yamux", "mplex", "secio", "swarm", "dns"], no-default-features = true }
